fixed a gantt chart resizing issue where items would spill over the parent container on resizing. overflow hidden solved this

--- a/src/App.css
+++ b/src/App.css
@@ -973,6 +973,7 @@ p {
   align-items: center;
   justify-content: center;
   text-align: end;
+  overflow: hidden;
 }
 
 .charts-overimposed > div > div {
@@ -981,6 +982,7 @@ p {
   background: #cfc8ff;
   display: flex;
   justify-content: flex-end;
+  overflow: hidden;
 }
 
 .charts-overimposed p {
